fix(main): fix responsive design not working on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@ section:not(:first-of-type):not(:last-of-type):not(:nth-of-type(2)) {
 }
 
 #home {
-    @apply h-screen fixed top-0 right-0 left-0 bg-theme-loader-light dark:bg-theme-secondary-dark;
+    @apply h-screen fixed top-0 right-0 left-0 bg-theme-loader-light dark:bg-theme-secondary-dark max-w-[100vw];
     z-index: -9000;
 }
 
